<resources>
    <string name="app_name">Instagram</string>
    <string name="person_name">gustavo.da.hora</string>
    <string name="liked">Curtido por mathh_s e outras pessoas</string>
    <string name="subtitle">Mais uma perola, e ai qual item da?</string>
    <string name="comment">Ver todos os 33 comentarios</string>
    <string name="logomarca">Logomarca</string>
    <string name="send_button">Send button</string>
    <string name="favorite_heart_icon">Favorite heart icon</string>
    <string name="plus_icon">Plus icon</string>
    <string name="home_button">Home Button</string>
    <string name="person_icon_to_change_screen">Person icon to change screen.</string>
    <string name="person_icon">Person Icon</string>
    <string name="menu_icon">menu icon</string>
    <string name="person_photo">Person photo</string>
    <string name="heart_to_favorite">Heart to favorite</string>
    <string name="comment_icon">Comment icon</string>
    <string name="send_img">Send img.</string>
    <string name="heart_to_like">heart to like</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="desk11">Desk11</string>
    <string name="dezk11">Dezk11</string>
    <string name="person_comment">O sorvete poderia estar em java</string>
    <string name="add_new_commentary">Adicione um comentário...</string>
    <string name="_57_minutos">57 minutos *</string>
    <string name="translate">Ver tradução</string>
    <string name="arrow_dropdown">Arrow dropdown</string>
    <string name="gustavo_da_hora">Gustavo da Hora</string>
    <string name="person_publications_number">344</string>
    <string name="person_publication">Publicações</string>
    <string name="person_follows_number">270</string>
    <string name="person_follows">Seguidores</string>
    <string name="person_following_number">351</string>
    <string name="person_following">Seguindo</string>
    <string name="grid_icon">Grid icon</string>
    <string name="play_button_icon">Play button icon</string>
</resources>