<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridProfile">

    <TextView
    android:id="@+id/app_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/person_name"
    android:textColor="@color/black"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="5dp"
    android:contentDescription="@string/logomarca" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:layout_constraintStart_toEndOf="@id/app_title"
        app:layout_constraintBottom_toBottomOf="@+id/app_title"
        app:layout_constraintTop_toTopOf="@+id/app_title"
        android:contentDescription="@string/arrow_dropdown" />

    <ImageView
        android:id="@+id/img_send_title"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="@+id/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_title"
        android:contentDescription="@string/send_button" />

    <ImageView
        android:id="@+id/img_heart_title"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_baseline_add_box_24"
        app:layout_constraintBottom_toBottomOf="@+id/app_title"
        app:layout_constraintEnd_toStartOf="@id/img_send_title"
        app:layout_constraintTop_toTopOf="@+id/app_title"
        android:contentDescription="@string/favorite_heart_icon"/>

    <ImageView
        android:id="@+id/img_person_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_pin_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/person_icon" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/gustavo_da_hora"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@id/img_person_icon"
        app:layout_constraintTop_toBottomOf="@id/img_person_icon"
        app:layout_constraintEnd_toEndOf="@id/img_person_icon"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/logomarca"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>